﻿$Revision$
	$Author$ $Date$
	1. немного рефакторинга с показом ошибок

#Revision: 1786
	#Author: ctapmex Date: 2011-09-01 11:34:22 +0600 (Чт, 01 сен 2011)
	1. наведение порядка с типами в SettingsControl
	2. исключение в SettingsControl
	3. немного форматирования кода
	4. Far3 2184 API (неизбежность, надо проверять , не сломалось ли что)

#Revision: 1785
	#Author: ctapmex Date: 2011-08-31 11:44:55 +0600 (Ср, 31 авг 2011)
	1. makefile

#Revision: 1783
	#Author: ctapmex Date: 2011-08-30 14:09:46 +0600 (Вт, 30 авг 2011)
	1. инициализация параметров, и недостяжимый код

#Revision: 1782
	#Author: ctapmex Date: 2011-08-30 10:35:12 +0600 (Вт, 30 авг 2011)
	1. ошибка освобождения памяти

#Revision: 1781
	#Author: ctapmex Date: 2011-08-29 22:53:38 +0600 (Пн, 29 авг 2011)
	1. makefile

#Revision: 1780
	#Author: ctapmex Date: 2011-08-29 22:34:37 +0600 (Пн, 29 авг 2011)
	1. коррекция отладочной информации
	2. Far3 2181 API

#Revision: 1776
	#Author: ctapmex Date: 2011-08-29 16:50:32 +0600 (Пн, 29 авг 2011)
	1. Far3 2180 API

#Revision: 1773
	#Author: ctapmex Date: 2011-08-09 12:37:19 +0600 (Вт, 09 авг 2011)
	1. немного упростим функцию PathToFull

#Revision: 1772
	#Author: ctapmex Date: 2011-08-08 20:43:20 +0600 (Пн, 08 авг 2011)
	1. доделан truemod. (остался крест для него)

#Revision: 1771
	#Author: ctapmex Date: 2011-08-05 11:29:55 +0600 (Пт, 05 авг 2011)
	1. защита от использования на far2

#Revision: 1770
	#Author: ctapmex Date: 2011-08-05 11:15:28 +0600 (Пт, 05 авг 2011)
	1. продолжаем переделку truemod

#Revision: 1769
	#Author: ctapmex Date: 2011-08-04 00:15:16 +0600 (Чт, 04 авг 2011)
	1. продолжаем переделку truemod

#Revision: 1768
	#Author: ctapmex Date: 2011-08-03 22:57:28 +0600 (Ср, 03 авг 2011)
	1. начало переделки родного truemod на фаровский

#Revision: 1766
	#Author: ctapmex Date: 2011-08-03 11:27:41 +0600 (Ср, 03 авг 2011)
	1. Far3 build 2124 API

#Revision: 1765
	#Author: ctapmex Date: 2011-07-24 23:56:40 +0600 (Вс, 24 июл 2011)