@@ -1,5 +1,10 @@
 ﻿$Revision$
 	$Author$ $Date$
+	1. ошибка очистки экрана при вызове диалога настроек
+	2. ошибка в экспортируемой функции, и избавление от возможного пересечения с именем глоб. переменной
+
+#Revision: 1787
+	#Author: ctapmex Date: 2011-09-01 12:39:43 +0600 (Чт, 01 сен 2011)
 	1. немного рефакторинга с показом ошибок
 
 #Revision: 1786
